Opened 12 years ago
Closed 8 years ago
#9939 closed bug (fixed)
BePac Deluxe doesn't work on Haiku
Reported by: | jessicah | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Audio & Video/Codecs | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | #7047 | Blocking: | |
Platform: | All |
Description
Trying to run BePac Deluxe, I get the following error at startup:
9PacSounds $ Cannot access sound file '00-Begin Level.AIFF' in directory '/boot/home/Desktop/BePacDeluxe_1.1.2_x86/Pac Sounds'.
I can confirm that the file does indeed exist, and it also plays correctly in MediaPlayer after adding aiff_reader
to the image (the ffmpeg add-on seems unable to play the aiff files).
The BeOS font files are also needed to be able to launch BePac Deluxe and get as far as the error above. BePac Deluxe is included in BeOS Max.
Attachments (1)
Change History (13)
comment:1 by , 11 years ago
patch: | 0 → 1 |
---|
comment:2 by , 11 years ago
comment:3 by , 11 years ago
Not quite sure we want all those TRACE()s enabled, due to WebKit's test suite choking on them... I vote to comment those out.
comment:4 by , 11 years ago
I've tested this patch, and playback of the AIFF files in MediaPlayer didn't work at all. All I got was silence.
So whilst BePac Deluxe now runs, this patch certainly needs more work.
comment:5 by , 11 years ago
Hmm, thought I had all traces disabled...
About the silence part, ffmpeg still has priority over aiff_reader and for some reason ffmpeg can't read the aiffs. Blacklisting ffmpeg works... (Or, you have another error I don't have...)
comment:6 by , 11 years ago
A couple links on related topics, about disabling AIFF support in ffmpeg and the kind of aiff files that ffmpeg seemingly supports or not https://dev.haiku-os.org/ticket/7047#comment:15 , https://dev.haiku-os.org/ticket/7047#comment:11
comment:7 by , 11 years ago
I didn't have ffmpeg enabled in my image. It's a problem with your changes to the raw decoder. If I reverted them, MediaPlayer could play the aiff files, although wasn't in a happy state. Making some change to the raw decoder introduced by stippi in 2010 made the playback better in MediaPlayer, but still not awesome. However, not sure if either of these is because of all the debugging or not.
comment:8 by , 11 years ago
The TRACE macro is only doing something if the code is built in debug mode. There is no need to additionally comment the calls. Moreover, WebKit isn't using any of this code. BSoundFile is an R3 API, and the web rarely comes with AIFF files these days.
by , 11 years ago
Attachment: | 0001-Fix-AIFF-and-SoundFile-BePac-Deluxe-now-runs-if-you-.patch added |
---|
Another Patch?
comment:9 by , 10 years ago
Blocked By: | 7047 added |
---|
In hrev48071 the ffmpeg decoder was fixed for AIFF files. This makes part of the patch now unneeded.
comment:10 by , 10 years ago
Component: | - General → Audio & Video/Codecs |
---|
Okay, here goes:
I have replaced some of raw_decoder, so it can decode more than the buffer (which is 8192 frames for me on the BePac Deluxe sound files), SoundFile first checks for the format family and then mime type to determine file type, aiff_reader is added into the regular image, lots of debugging added. I also added a failsafe in ffmpeg in case it doesn't recognize it at all (does that ever happen?)
Thanks to jessicah for the aiff_reader Jamfile, btw!